💫 refactor: importação automática de variáveis no SCSS

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,6 +1,2 @@
-$theme: 2;
-$primary: #e5f230;
-$secondary: #54d863;
-
 @import "configs/";
-@import 'material-icons/iconfont/material-icons.css';
+@import "material-icons/iconfont/material-icons.css";
