--- a/src/styles/configs/fonts.scss
+++ b/src/styles/configs/fonts.scss
@@ -19,3 +19,23 @@
 .font-bb {
   font-family: "BenguiatBold";
 }
+
+@font-face {
+  font-family: "Roboto";
+  src: url("@/assets/fonts/Roboto/Roboto-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+.font-roboto {
+  font-family: "Roboto";
+}
+
+@font-face {
+  font-family: "Montserrat";
+  src: url("@/assets/fonts/Montserrat/static/Montserrat-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+.font-montserrat {
+  font-family: "Montserrat";
+}
