--- a/src/styles/configs/_index.scss
+++ b/src/styles/configs/_index.scss
@@ -1,4 +1,5 @@
-@import "reset.scss";
 @import "variables.scss";
-@import "colors.scss";
 @import "fonts.scss";
+@import "colors.scss";
+@import "forms.scss";
+@import "reset.scss";
