--- a/src/styles/configs/reset.scss
+++ b/src/styles/configs/reset.scss
@@ -1,13 +1,14 @@
-body{
+body {
   margin: 0;
   padding: 0;
 }
-span{
+span {
   word-break: break-word;
 }
-a{
+a {
   text-decoration: none;
 }
-*{
-  font-family: 'Roboto';
+* {
+  color: $gray-800 !important;
+  font-family: "Roboto" !important;
 }
