✨ feat: novas fontes

--- a/src/styles/configs/fonts.scss
+++ b/src/styles/configs/fonts.scss
@@ -7,7 +7,7 @@
   font-style: normal;
 }
 .font-hj {
-  font-family: "HighJersey";
+  font-family: "HighJersey" !important;
 }
 
 @font-face {
@@ -17,7 +17,7 @@
   font-style: normal;
 }
 .font-bb {
-  font-family: "BenguiatBold";
+  font-family: "BenguiatBold" !important;
 }
 
 @font-face {
@@ -27,7 +27,7 @@
   font-style: normal;
 }
 .font-roboto {
-  font-family: "Roboto";
+  font-family: "Roboto" !important;
 }
 
 @font-face {
@@ -37,5 +37,45 @@
   font-style: normal;
 }
 .font-montserrat {
-  font-family: "Montserrat";
+  font-family: "Montserrat" !important;
+}
+
+@font-face {
+  font-family: "Adam_Script";
+  src: url("@/assets/fonts/Adam_Script/adam-script.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+.font-adam-scrpit {
+  font-family: "Adam_Script" !important;
+}
+
+@font-face {
+  font-family: "Open_Sans";
+  src: url("@/assets/fonts/Open_Sans/OpenSans-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+.font-open-sans {
+  font-family: "Open_Sans" !important;
+}
+
+@font-face {
+  font-family: "Open_Sans_Bold";
+  src: url("@/assets/fonts/Open_Sans/OpenSans-Bold.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+.font-open-sans-bold {
+  font-family: "Open_Sans_Bold" !important;
+}
+
+@font-face {
+  font-family: "Calistoga";
+  src: url("@/assets/fonts/Calistoga/Calistoga-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+.font-calistoga {
+  font-family: "Calistoga" !important;
 }
