--- a/src/styles/configs/fonts.scss
+++ b/src/styles/configs/fonts.scss
@@ -1,4 +1,26 @@
 @font-face {
+  font-family: "MaterialIcons";
+  font-style: normal;
+  font-weight: normal;
+  src: url("@/assets/fonts/Material_Icons/Material_Icons.ttf") format("truetype");
+}
+
+.material-icons {
+  font-family: "MaterialIcons" !important;
+  font-weight: normal;
+  font-style: normal;
+  // font-size: 24px;
+  line-height: 1;
+  letter-spacing: normal;
+  text-transform: none;
+  display: inline-block;
+  white-space: nowrap;
+  word-wrap: normal;
+  direction: ltr;
+  -webkit-font-smoothing: antialiased;
+}
+
+@font-face {
   font-family: "HighJersey";
   src: url("@/assets/fonts/High_Jersey/High Jersey.woff2") format("woff2"),
     url("@/assets/fonts/High_Jersey/High Jersey.woff") format("woff"),
