--- a/src/styles/material-icons.scss
+++ b/src/styles/material-icons.scss
@@ -1,13 +1,12 @@
-/* fallback */
 @font-face {
-    font-family: "Material Icons";
+    font-family: "Material_Icons";
     font-style: normal;
     font-weight: 400;
-    src: url(https://fonts.gstatic.com/s/materialicons/v138/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2) format("woff2");
+    src: url("@/assets/fonts/Material_Icons/Material_Icons.ttf") format("truetype");
 }
 
 .material-icons {
-    font-family: "Material Icons";
+    font-family: "Material_Icons";
     font-weight: normal;
     font-style: normal;
     font-size: 24px;
