✨ feat: rota de concluido

--- a/src/styles/configs/colors.scss
+++ b/src/styles/configs/colors.scss
@@ -68,5 +68,7 @@ $theme-colors: map-merge(
   }
 }
 
+$rifa-font-color: #5d5d44;
+$rifa-good-color: #f3ccbe;
 // $complementPrimary: complement($primary);
 // $complementSecondary: complement($secondary);
