🐛 fix: fix bootstrap collapse

--- a/src/styles/bootstrap.scss
+++ b/src/styles/bootstrap.scss
@@ -13,3 +13,4 @@
 // 4. Include any optional Bootstrap components as you like
 @import "~bootstrap/scss/forms";
 @import "~bootstrap/scss/buttons";
+@import "~bootstrap/scss/transitions";
